--- a/css/layout.css
+++ b/css/layout.css
@@ -9,6 +9,7 @@ body{
     min-height: 100%;
     font-size: 20px;
     font-family: sans-serif;
+    background-color: #f8f3e1;
 }
 .container{
     width: 100%;
@@ -28,13 +29,34 @@ header{
 main{
     width: 100%;
     min-height: 1000px;
-    background-color: #8b4848;
+
 }
 
 footer{
     width: 100%;
     min-height: 150px;
-    background-color: blue;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+}
+
+.click_up{
+    width: 40px;
+    height: 40px;
+    top:0;
+    right: 0;
+    
+}
+.click_up a img{
+    border-radius: 50px;
+    padding: 5px;
+    display: flex;;
+    background-color: #0000009d;
+    top:0;
+    right: 0;
+}
+.click_up img{
+    width: 35px;
+    height: 35px;
+
 }
