--- a/css/layout.css
+++ b/css/layout.css
@@ -19,9 +19,8 @@ body{
 header{
     width: 100%;
     min-height: 80px;
-    background-color: blue;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 
 }
