--- a/css/layout.css
+++ b/css/layout.css
@@ -37,25 +37,16 @@ footer{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-bottom: 20px;
 }
 
-.click_up{
-    width: 40px;
-    height: 40px;
-    top:0;
-    right: 0;
-    
-}
 .click_up a img{
     border-radius: 50px;
     padding: 5px;
     display: flex;;
-    background-color: #0000009d;
-    top:0;
-    right: 0;
+    background-color: #d11c1c83;
 }
 .click_up img{
     width: 35px;
     height: 35px;
-
 }
