--- a/css/layout.css
+++ b/css/layout.css
@@ -9,7 +9,8 @@ body{
     min-height: 100%;
     font-size: 20px;
     font-family: sans-serif;
-    background-color: #f8f3e1;
+    background-color: #1C0808;
+    color: white;
 }
 .container{
     width: 100%;
