--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ section.apropos{
     max-height: 90vh;
     padding: 40px;
     border-radius: 40px 0 16px 0;
-    background-color: #fff;
+    background-color: #772222;
     border:15px  rgb(187, 66, 66);
     border-style: groove;
 }
@@ -76,7 +76,7 @@ section.apropos{
 
 
 section.fin{
-    border-top: solid 1px;
+    border-top: solid 1px ;
     width: 80%;
     margin: 0 10%;
     height: 300px;
