--- a/css/navigation.css
+++ b/css/navigation.css
@@ -12,7 +12,7 @@ nav ul li {
   margin: 0 20px;
   padding: 10px 40px;
   border-radius: 16px;
-  background-color: #d11c1c;
+  background-color: #C63939;
   list-style: none;
 }
 
